--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "node scripts/run-migrations.js"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
-    "@fortawesome/free-solid-svg-icons": "^6.4.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.6",
     "@nextui-org/button": "^2.0.38",
     "@nextui-org/card": "^2.0.34",
     "@nextui-org/checkbox": "^2.1.5",
@@ -28,13 +29,14 @@
     "@nextui-org/theme": "^2.2.11",
     "@react-aria/ssr": "^3.7.1",
     "@react-aria/visually-hidden": "^3.8.3",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.0.0",
-    "firebase": "^10.5.2",
-    "firebase-admin": "^13.0.1",
     "framer-motion": "^10.17.0",
     "intl-messageformat": "^10.5.0",
+    "lucide-react": "^0.555.0",
     "next": "^15.0.3",
     "next-themes": "^0.2.1",
+    "pg": "^8.11.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
@@ -43,7 +45,8 @@
     "tailwind-variants": "^0.1.13"
   },
   "devDependencies": {
-    "@types/node": "20.5.7",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/node": "^20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
