--- a/package.json
+++ b/package.json
@@ -29,20 +29,24 @@
     "@nextui-org/theme": "^2.2.11",
     "@react-aria/ssr": "^3.7.1",
     "@react-aria/visually-hidden": "^3.8.3",
+    "@types/three": "^0.181.0",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.0.0",
+    "face-api.js": "^0.22.2",
     "framer-motion": "^10.17.0",
     "intl-messageformat": "^10.5.0",
     "lucide-react": "^0.555.0",
     "next": "^15.0.3",
     "next-themes": "^0.2.1",
     "pg": "^8.11.3",
+    "postprocessing": "^6.38.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
     "react-photo-album": "^3.0.2",
     "react-spotify-embed": "^2.0.3",
-    "tailwind-variants": "^0.1.13"
+    "tailwind-variants": "^0.1.13",
+    "three": "^0.181.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
